--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ jupyter==1.0.0
 notebook==6.0.3
 numba==0.50.1
 numexpr==2.7.1
-numpy==1.18.5
+
 
 
 pandas 
@@ -47,7 +47,7 @@ plotly==4.14.1
 
 
 python-dateutil==2.8.1
-
+python
 
 
 requests 
