--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ numexpr==2.7.1
 
 
 
-pandas 
+pandas==1.0.5
 
 
 
@@ -47,35 +47,18 @@ plotly==4.14.1
 
 
 python-dateutil==2.8.1
-python
+python.app==2
 
 
-requests 
+requests==2.24.0
 
 scikit-image==0.16.2
-scikit-learn 
-scipy 
+scikit-learn==0.23.1
+scipy==1.5.0
 seaborn==0.10.1
 
-soupsieve==2.0.1
-Sphinx @ file:///tmp/build/80754af9/sphinx_1594223420021/work
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1593446360927/work
-
-SQLAlchemy @ file:///opt/concourse/worker/volumes/live/45657106-f60d-42e1-6501-7d65be3b36ab/volume/sqlalchemy_1593446313078/work
 
 
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1592847887441/work
-ujson==1.35
-unicodecsv==0.14.1
-urllib3==1.25.9
-
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
