--- a/requirements.txt
+++ b/requirements.txt
@@ -32,9 +32,7 @@ jupyter==1.0.0
 
 
 notebook==6.0.3
-numba==0.50.1
-numexpr==2.7.1
-
+numpy==1.18.5
 
 
 pandas==1.0.5
@@ -45,7 +43,13 @@ plotly==4.14.1
 
 
 
-
+python==3.8.3                
+python-dateutil==2.8.1             
+python-jsonrpc-server==0.3.4             
+python-language-server==0.34.1         
+python-libarchive-c==2.9                 
+python.app==2                  
+python_abi==3.8 
 
 
 
